--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
 
   "CloudinarySettings": {
     "CloudName": "dnakawcqu",
-    "ApiKey": "882296526559817",
-    "ApiSecret": "nnq_iBOrKlaBt-eWC_ZiruKVVjs"
+    "ApiKey": ,
+    "ApiSecret": 
   },
 
   "Logging": {
