--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
 
   "CloudinarySettings": {
     "CloudName": "dnakawcqu",
-    "ApiKey": ,
-    "ApiSecret": 
+    "ApiKey": "",
+    "ApiSecret": ""
   },
 
   "Logging": {
