--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,7 @@
   },
 
   "CloudinarySettings": {
-    "CloudName": "dnakawcqu",
+    "CloudName": "",
     "ApiKey": "",
     "ApiSecret": ""
   },
